--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Jamie Kyle <me@thejameskyle.com>",
   "license": "MIT",
   "devDependencies": {
+    "expect-type": "^0.19.0",
     "typescript": "^4.1.0-dev.20200903"
   }
 }
